public class Neutral {
	Race race;
}

