@startuml
hide circle
title <b>Scenario Class Diagram </b>\nAuthored by: Chihsiang Wang\nReviewed by:Simon, Westrope, Higley, Shepherd



class User_Interface {

    +void Start_Game()
    +void Exit_Game()
    +void Game_Help()
    +int PickScenario()
    
    
}

class Scenario {
    -Game_Turn : Integer
    -Scenario_ID : Integer
    -Amoount_of_players : Integer
    +void Initialization()
    +void Calculate_Winning()
    +void Random_Event()
    
    
}

class Players {
   -Current_Player_Province : Integer
   -Current_PlayerNumber : Integer
   -Number_of_Units : Integer
   -Winning_Points : Integer
   
   +int Rolling_Dices()
   +void Pick_Units()
   +void Move_Units()
   +void Combat()
   +void Cast_Magic()
   +void Open_Current_Player_Status()
   +void Game_Help()
   +boolean Retreat()
   +boolean Stack()
   

    
   
}

class Neutral {
   
}

class Map {

}



class Army_Unit {

}

class Champion {

}

class Items {

}

class Spells {

}

class Units{

}

Scenario -up- User_Interface
Neutral --o Scenario
Map --* Scenario



Players --o Scenario
Players *-- Units
Units <|-- Army_Unit
Units <|-- Champion
Champion ..> Spells : use
Champion ..> Items : own

@enduml
